  search tree after a restart was applied and the current dive ended due to infeasibility
- removed "objfeaspump" heuristic, because the functionality can be achieved by using the "feaspump" heuristic
- diving heuristics are now applying propagation after each bound change
- new primal heuristic "octane"

parameters:
- replaced parameter presolving/restartbdchgs with parameters presolving/maxrestarts and presolving/restartfac
- new parameter conflict/maxclauses
- new parameter conflict/allowlocal
- new parameter branching/fullstrong/reevalage

features:
- reactivated multiaggregation in cons_linear.c on binary variables again (possible due to bug fix below)
- introduced subversion string
- adding variable bounds automatically adds the corresponding implication
- conflict clauses are now collected in a conflict store, redundant clauses are eliminated, and only the best
  "conflict/maxclauses" clauses are added permanently to the problem; the remaining clauses are only added
  temporarily, if they can be used for repropagation
- improved debugging for infeasible cuts and propagations, given a primal feasible solution

fixed bugs:
- LP primal feasibility for bounds is now defined as absolute measure (was relative to the bound before);
  this fixes a bug (see alu8_9.mps), that an LP with an integral variable fixed to a large value yields an
  accepted solution with that variable slightly different than the fixed value; the integrality feasibility
  condition is measured with absolute differences, which leads to the fixed integer variable being fractional;
  this leads to an error if branching is performed on this variable
- locally fixed variables are no longer used as branching candidates even if their LP solution value is
  fractional (due to numerical reasons, see above)
- fixed minor bugs in debug code of primal.c and sol.c
- variables that are being multiaggregated are now automatically removed from all other variables' variable bound